[package]
name = "druid_garden_chia_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We need more recent updates clvm_rs = "0.1.17"
clvmr = { git = "https://github.com/Chia-Network/clvm_rs"}
clvm_tools_rs = {git = "https://github.com/Chia-Network/clvm_tools_rs"}
druid_garden_chiapos = { path="../RustChiaPOS" }
hex = "*"
sha2 = "*"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
serde_derive = "1.0"
serde_json = "1.0"
num-bigint = "=0.4.0"
num-traits = "=0.2.14"
[dependencies.clvm_rs]
git = "https://github.com/prozacchiwawa/clvm_rs"
branch = "20211029-try-config"
package = "clvm_rust"